Removed commons-codec and replaced it with a Java 5 native Base64 encoder/decoder.