@@ -33,10 +33,11 @@
 
 package com.yubico.client.v2;
 
-import com.yubico.client.v2.exceptions.YubicoVerificationException;
 import com.yubico.client.v2.exceptions.YubicoValidationFailure;
+import com.yubico.client.v2.exceptions.YubicoVerificationException;
 import com.yubico.client.v2.impl.YubicoClientImpl;
-import org.apache.commons.codec.binary.Base64;
+
+import javax.xml.bind.DatatypeConverter;
 
 /**
  * Base class for doing YubiKey validations using version 2 of the validation protocol.
@@ -98,7 +99,7 @@ public abstract class YubicoClient {
      * @see YubicoClient#setClientId(Integer)
      */
     public void setKey(String key) {
-        this.key = Base64.decodeBase64(key.getBytes());
+        this.key = DatatypeConverter.parseBase64Binary(key);
     }
     
     /**
@@ -107,7 +108,7 @@ public abstract class YubicoClient {
      * @see YubicoClient#setClientId(Integer)
      */
     public String getKey() {
-        return new String(Base64.encodeBase64(this.key));
+        return DatatypeConverter.printBase64Binary(this.key);
     }
     
     /**
